# order-matching-simulator

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  order.h  trader.h  types.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/execution_context/: CMakeLists.txt  execution_context.cc  execution_context.h
lib/core/order/: CMakeLists.txt  order.cc  order.h
lib/core/order_book/: CMakeLists.txt  order_book.cc  order_book.h
lib/core/self_trade_handler/: CMakeLists.txt  self_trade_handler.h
lib/core/trader/: CMakeLists.txt  trader.h
src/: CMakeLists.txt  main.cc
src/matching_engine/: CMakeLists.txt  matching_engine.cc  matching_engine.h  self_trade_handler.cc  self_trade_handler.h
src/order_book/: CMakeLists.txt  order_book.cc  order_book.h
tests/: CMakeLists.txt  test_matching_engine.cc  test_order_book.cc  test_order_book.cpp
